Lego Editor Change Log
2013/03/22 - 1.1
  *  Fix main GUI thread blocking while WB loading bug.
  
2013/03/22 - 1.0
  *  Filtered '(' and ')' out of the lucene queries so they FSNs don't cause searches to fail.
  *  Fixed a bug where the PNCS filter drop down wasn't being updated after a new lego was created
  *  Fixed a bug where rapid changes to the lego list filters could cause strange behavior
  *  Fixed a null pointer that could happen in certain situations within the filter update.
  *  Fixed a null pointer that happened if you tried to view a new (unsaved) lego in the web browser
  *  Moved the validator calls into a background (non-GUI) thread
  *  Added progress indicators for node validation-in-progress.
  *  Fixed a bug in the PointNode validation error reporting for intervals and bounds that was a 
     a regression in the 0.57 release. 
  *  Fixed a bug where the Lego filter could flag an blank concept field as invalid.
  *  Allow pending concepts to have pending concept parents (without logging a warning at startup)
  *  Fix bug on "View Concept" menu option when the concept in question was a pending concept.  Also allow
  		viewing of pending concepts, and show GUI indicator on pending concepts.
  *  Fixed a bug with showing the error dialog.
  *  Fixed browser launching on Mac.
  *  artf227644 - Add CEM import / viewer tool.
  *  artf227406 - Add support for drools rule processing.
  *  artf227504 - Add type-ahead searching for all concept fields.

2013/03/14 - 0.57
  *  Fixed the summary view on/off switch so it takes effect on Legos that are already open.
  *  Fixed the behavior of the left arrow key in the concept combo-box editors
  *  Changed the behavior of the concept combo-box editors so that you don't lose the entire entry if 
  		the lookup fails. 
  *  Fixed a null pointer that could happen during certain copy operations
  *  Fixed a null pointer in the interval validator that could happen after a particular sequence